--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,22 @@
 name: mason
 description: >
   A template generator which helps you lay the foundation for your next project.
-# After changing the version, run `pub run build_runner build`.
 version: 0.0.1+1
 homepage: https://github.com/felangel/mason
 
 environment:
   sdk: ">=2.8.1 <3.0.0"
+
+dependencies:
+  build_cli_annotations: ^1.2.0
+  io: ^0.3.4
+
+dev_dependencies:
+  build_cli: ^1.3.7
+  build_runner: ^1.10.0
+  build_verify: ^1.1.1
+  build_version: ^2.0.1
+  test: ^1.14.3
 
 executables:
   mason:
