--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,18 @@ environment:
 
 dependencies:
   build_cli_annotations: ^1.2.0
+  checked_yaml: ^1.0.2
+  equatable: ^1.2.5
   io: ^0.3.4
+  json_annotation: ^3.0.1
+  yaml: ^2.2.1
 
 dev_dependencies:
   build_cli: ^1.3.7
   build_runner: ^1.10.0
   build_verify: ^1.1.1
   build_version: ^2.0.1
+  json_serializable: ^3.3.0
   test: ^1.14.3
 
 executables:
