--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   build_cli_annotations: ^1.2.0
   checked_yaml: ^1.0.2
+  http: ^0.12.2
   io: ^0.3.4
   json_annotation: ^3.0.1
   mustache_template: ^1.0.0+1
