--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
   sdk: ">=2.8.1 <3.0.0"
 
 dependencies:
-  build_cli_annotations: ^1.2.0
+  args: ^1.6.0
   checked_yaml: ^1.0.2
   http: ^0.12.2
   io: ^0.3.4
