--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,7 +7,7 @@ analyzer:
     - "test/.test_coverage.dart"
     - "**/*.g.dart"
     - "**/version.dart"
-    - example/templates/**
+    - templates/**
 
 linter:
   rules:
