--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mason
 description: >
   A Dart template generator which helps teams generate files quickly and consistently.
-version: 0.0.1-dev.9
+version: 0.0.1-dev.10
 homepage: https://github.com/felangel/mason
 
 environment:
@@ -10,6 +10,7 @@ environment:
 dependencies:
   args: ^1.6.0
   checked_yaml: ^1.0.2
+  http: ^0.12.2
   io: ^0.3.4
   json_annotation: ^3.0.1
   mustache_template: ^1.0.0+1
