--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   build_verify: ^1.1.1
   build_version: ^2.0.1
   json_serializable: ^3.3.0
+  mockito: ^4.0.0
   test: ^1.14.3
 
 executables:
