--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   build_runner: ^1.10.0
   build_verify: ^1.1.1
   build_version: ^2.0.1
+  coverage: ^0.14.2
   json_serializable: ^3.3.0
   mockito: ^4.0.0
   test: ^1.14.3
