--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,6 +5,7 @@ analyzer:
 
   exclude:
     - "test/.test_coverage.dart"
+    - "test/fixtures/**"
     - "**/*.g.dart"
     - "**/version.dart"
     - bricks/**
