--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,7 +30,4 @@ jobs:
         run: dart test --run-skipped -t pull-request-only
 
       - name: Run Tests
-        run: |
-          pub global activate coverage
-          export PATH=$PATH:$HOME/.pub-cache/bin
-          dart test -j 1 -x pull-request-only --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+        run: dart test -j 1 -x pull-request-only --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
