--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   build_runner: ^2.0.0
   build_verify: ^2.0.0
   build_version: ^2.0.0
+  coverage: ^1.0.2
   json_serializable: ^4.1.0
   mocktail: ^0.1.1
   test: ^1.17.0
