--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,32 @@
 name: mason
 description: >
   A Dart template generator which helps teams generate files quickly and consistently.
-version: 0.0.1-dev.27
+version: 0.0.1-dev.28
 homepage: https://github.com/felangel/mason
 
 environment:
-  sdk: ">=2.8.1 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  args: ^1.6.0
-  checked_yaml: ^1.0.2
-  collection: ^1.14.13
-  http: ^0.12.2
-  io: ^0.3.4
-  json_annotation: ^3.0.1
-  mustache_template: ^1.0.0+1
-  path: ^1.7.0
-  recase: ^3.0.1
-  yaml: ^2.2.1
+  args: ^2.1.0
+  checked_yaml: ^2.0.1
+  collection: ^1.15.0
+  http: ^0.13.3
+  io: ^1.0.0
+  json_annotation: ^4.0.1
+  mustache_template: ^2.0.0
+  path: ^1.8.0
+  recase: ^4.0.0
+  yaml: ^3.1.0
 
 dev_dependencies:
-  build_runner: ^1.10.0
-  build_verify: ^1.1.1
-  build_version: ^2.0.1
-  coverage: ^0.14.2
-  json_serializable: ^3.3.0
-  mockito: ^4.0.0
-  test: ^1.14.3
+  build_runner: ^2.0.0
+  build_verify: ^2.0.0
+  build_version: ^2.0.0
+  coverage: ^1.0.2
+  json_serializable: ^4.1.0
+  mocktail: ^0.1.1
+  test: ^1.17.0
 
 executables:
   mason:
