--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,12 +16,10 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-    
-    container:
-      image: google/dart:2.12.0
 
     steps:
       - uses: actions/checkout@v2
+      - uses: dart-lang/setup-dart@v1
 
       - name: Install Dependencies
         run: pub get
