--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,24 +26,8 @@ jobs:
       - name: Analyze
         run: dart analyze --fatal-infos --fatal-warnings .
 
-      # - name: Ensure Build
-      #   run: dart test --run-skipped -t pull-request-only
-
-  test:
-    needs: build
-
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
-
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: dart-lang/setup-dart@v1
-
-      - name: Install Dependencies
-        run: pub get
+      - name: Ensure Build
+        run: dart test --run-skipped -t pull-request-only
 
       - name: Run Tests
         run: dart test -j 1 -x pull-request-only --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
