--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,10 +12,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: google/dart:2.12.0
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
+      - uses: dart-lang/setup-dart@v1
 
       - name: Install Dependencies
         run: pub get
