--- a/.github/workflows/pub_score.yaml
+++ b/.github/workflows/pub_score.yaml
@@ -25,5 +25,8 @@ jobs:
       - name: Verify Pub Score
         run: |
           PANA=$(pana . --no-warning)
-          SCORE=$(echo $PANA | sed -n "s/.*Points: \(\[0-9]+\)*/\1/p")
-          echo "Pub Score: $SCORE"
+          SCORE=$(echo $PANA | sed -n "s/Points: \([0-9]*\)\/\([0-9]*\)./\1\/\2/p")
+          IFS='/'
+          read -a SCORE_ARR <<< "$SCORE"
+          echo "SCORE: ${SCORE_ARR[0]}"
+          echo "TOTAL: ${SCORE_ARR[1]}"
