--- a/.github/workflows/pub_score.yaml
+++ b/.github/workflows/pub_score.yaml
@@ -27,6 +27,7 @@ jobs:
           PANA=$(pana . --no-warning)
           SCORE=$(echo $PANA | sed -n "s/Points: \([0-9]*\)\/\([0-9]*\)./\1\/\2/p")
           IFS='/'
+          echo "PANA SCORE: $SCORE"
           read -a SCORE_ARR <<< "$SCORE"
           echo "SCORE: ${SCORE_ARR[0]}"
           echo "TOTAL: ${SCORE_ARR[1]}"
