--- a/.github/workflows/pub_score.yaml
+++ b/.github/workflows/pub_score.yaml
@@ -25,9 +25,9 @@ jobs:
       - name: Verify Pub Score
         run: |
           PANA=$(pana . --no-warning)
-          SCORE=$(echo $PANA | sed -n "s/Points: \([0-9]*\)\/\([0-9]*\)./\1\/\2/p")
-          IFS='/'
+          SCORE=$(echo $PANA | sed -n "s/.*Points: \([0-9]*\)\/\([0-9]*\)./\1\/\2/p")
           echo "PANA SCORE: $SCORE"
+          IFS='/'
           read -a SCORE_ARR <<< "$SCORE"
           echo "SCORE: ${SCORE_ARR[0]}"
           echo "TOTAL: ${SCORE_ARR[1]}"
