--- a/.github/workflows/pub_score.yaml
+++ b/.github/workflows/pub_score.yaml
@@ -24,10 +24,7 @@ jobs:
 
       - name: Verify Pub Score
         run: |
-          PANA=$(pana . --no-warning)
-          SCORE=$(echo $PANA | sed -n "s/.*Points: \([0-9]*\)\/\([0-9]*\)./\1\/\2/p")
-          echo "PANA SCORE: $SCORE"
-          IFS='/'
-          read -a SCORE_ARR <<< "$SCORE"
-          echo "SCORE: ${SCORE_ARR[0]}"
-          echo "TOTAL: ${SCORE_ARR[1]}"
+          MIN_SCORE=120; PANA=$(pana . --no-warning); PANA_SCORE=$(echo $PANA | sed -n "s/.*Points: \([0-9]*\)\/\([0-9]*\)./\1\/\2/p")
+          echo "score: $PANA_SCORE"
+          IFS='/'; read -a SCORE_ARR <<< "$PANA_SCORE"; SCORE=SCORE_ARR[0]; TOTAL=SCORE_ARR[1]
+          if (( $SCORE < $MIN_SCORE )); then echo "minimum score not met!"; exit 1; fi
