switch to dart based job

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,12 +37,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2.3.4
-      - uses: subosito/flutter-action@v1.5.0
+      - uses: dart-lang/setup-dart@v1
 
       - name: Install Dependencies
         run: |
-          flutter packages get
-          flutter pub global activate pana
+          dart pub get
+          dart pub global activate pana
 
       - name: Verify Pub Score
         run: |
