--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,27 +10,27 @@ on:
       - master
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
+  # setup:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: dart-lang/setup-dart@v1
+  #   steps:
+  #     - uses: actions/checkout@v2.3.4
+  #     - uses: dart-lang/setup-dart@v1
 
-      - name: Install Dependencies
-        run: pub get
+  #     - name: Install Dependencies
+  #       run: pub get
 
-      - name: Format
-        run: dart format --set-exit-if-changed lib
+  #     - name: Format
+  #       run: dart format --set-exit-if-changed lib
 
-      - name: Analyze
-        run: dart analyze --fatal-infos --fatal-warnings .
+  #     - name: Analyze
+  #       run: dart analyze --fatal-infos --fatal-warnings .
 
-      - name: Ensure Build
-        run: dart test --run-skipped -t pull-request-only
+  #     - name: Ensure Build
+  #       run: dart test --run-skipped -t pull-request-only
 
   build:
-    needs: setup
+    # needs: setup
 
     runs-on: ${{ matrix.os }}
 
@@ -48,21 +48,21 @@ jobs:
       - name: Run Tests
         run: dart test -j 1 -x pull-request-only --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
-  pana:
-    runs-on: ubuntu-latest
+  # pana:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: subosito/flutter-action@v1.5.0
+  #   steps:
+  #     - uses: actions/checkout@v2.3.4
+  #     - uses: subosito/flutter-action@v1.5.0
 
-      - name: Install Dependencies
-        run: |
-          flutter packages get
-          flutter pub global activate pana
+  #     - name: Install Dependencies
+  #       run: |
+  #         flutter packages get
+  #         flutter pub global activate pana
 
-      - name: Verify Pub Score
-        run: |
-          MIN_SCORE=110; PANA=$(pana . --no-warning); PANA_SCORE=$(echo $PANA | sed -n "s/.*Points: \([0-9]*\)\/\([0-9]*\)./\1\/\2/p")
-          echo "score: $PANA_SCORE"
-          IFS='/'; read -a SCORE_ARR <<< "$PANA_SCORE"; SCORE=SCORE_ARR[0]; TOTAL=SCORE_ARR[1]
-          if (( $SCORE < $MIN_SCORE )); then echo "minimum score not met!"; exit 1; fi
+  #     - name: Verify Pub Score
+  #       run: |
+  #         MIN_SCORE=110; PANA=$(pana . --no-warning); PANA_SCORE=$(echo $PANA | sed -n "s/.*Points: \([0-9]*\)\/\([0-9]*\)./\1\/\2/p")
+  #         echo "score: $PANA_SCORE"
+  #         IFS='/'; read -a SCORE_ARR <<< "$PANA_SCORE"; SCORE=SCORE_ARR[0]; TOTAL=SCORE_ARR[1]
+  #         if (( $SCORE < $MIN_SCORE )); then echo "minimum score not met!"; exit 1; fi
