--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   args: ^2.1.0
   checked_yaml: ^2.0.1
   collection: ^1.15.0
+  crypto: ^3.0.1
   http: ^0.13.3
   io: ^1.0.0
   json_annotation: ^4.0.1
