--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,7 +46,7 @@ jobs:
         run: dart pub get
 
       - name: Run Tests
-        run: dart test -j 1 -x pull-request-only test/commands/new_test.dart
+        run: dart test -j 1 -x pull-request-only test/commands/init_test.dart
         # run: dart test -j 1 -x pull-request-only --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
   # pana:
