--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,8 +46,7 @@ jobs:
         run: dart pub get
 
       - name: Run Tests
-        run: dart test -j 1 -x pull-request-only test/commands/init_test.dart
-        # run: dart test -j 1 -x pull-request-only --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+        run: dart test -j 1 -x pull-request-only --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
   # pana:
   #   runs-on: ubuntu-latest
