--- a/test/fixtures/init/mason.yaml
+++ b/test/fixtures/init/mason.yaml
@@ -8,7 +8,7 @@ bricks:
   # Bricks can also be imported via git url.
   # Uncomment the following lines to import
   # a brick from a remote git url.
-  # todos:
+  # widget:
   #   git:
-  #     url: git@github.com:felangel/mason.git
-  #     path: bricks/todos
+  #     url: https://github.com/felangel/mason.git
+  #     path: bricks/widget
