--- a/example/mason.yaml
+++ b/example/mason.yaml
@@ -7,6 +7,8 @@ bricks:
     path: ../bricks/greeting
   hello_world:
     path: ../bricks/hello_world
+  simple:
+    path: ../bricks/simple
   todos:
     path: ../bricks/todos
   widget:
