--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Install Dependencies
         run: |
           dart pub get
-          dart pub global activate pana 0.19.1
+          dart pub global activate pana
 
       - name: Verify Pub Score
         run: |
