--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
   collection: ^1.15.0
   crypto: ^3.0.1
   http: ^0.13.3
-  io: ^1.0.0
   json_annotation: ^4.0.1
   mustache_template: ^2.0.0
   path: ^1.8.0
   recase: ^4.0.0
+  universal_io: ^2.0.4
   yaml: ^3.1.0
 
 dev_dependencies:
