--- a/example/mason.yaml
+++ b/example/mason.yaml
@@ -7,6 +7,8 @@ bricks:
     path: ../bricks/greeting
   hello_world:
     path: ../bricks/hello_world
+  plugin:
+    path: ../bricks/plugin
   simple:
     path: ../bricks/simple
   todos:
