refactor: cleanup and fix working directory for script execution

--- a/example/mason.yaml
+++ b/example/mason.yaml
@@ -7,6 +7,8 @@ bricks:
     path: ../bricks/greeting
   hello_world:
     path: ../bricks/hello_world
+  hooks:
+    path: ../bricks/hooks
   plugin:
     path: ../bricks/plugin
   simple:
