--- a/.github/workflows/mason_logger.yaml
+++ b/.github/workflows/mason_logger.yaml
@@ -11,7 +11,7 @@ on:
   pull_request:
     branches:
       - master
-      -  feat/mason-logger
+      -  feat/mason_cli
     paths:
       - .github/workflows/mason_logger.yaml
       - packages/mason_logger/**
