--- a/packages/mason_logger/pubspec.yaml
+++ b/packages/mason_logger/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mason_logger
-description: A Dart logger used by mason.
-version: 0.1.0-dev.1
+description: A reusable Dart logger used by the [Mason CLI](https://github.com/felangel/mason).
+version: 0.1.0-dev.2
 homepage: https://github.com/felangel/mason
 
 environment:
