--- a/packages/mason_cli/test/fixtures/make/mason.yaml
+++ b/packages/mason_cli/test/fixtures/make/mason.yaml
@@ -1,17 +1,19 @@
 bricks:
   app_icon:
-    path: ../../../bricks/app_icon
+    path: ../../../../../bricks/app_icon
   documentation:
-    path: ../../../bricks/documentation
+    path: ../../../../../bricks/documentation
   hello_world:
-    path: ../../../bricks/hello_world
+    path: ../../../../../bricks/hello_world
   hooks:
-    path: ../../../bricks/hooks
+    path: ../../../../../bricks/hooks
   greeting:
-    path: ../../../bricks/greeting
+    path: ../../../../../bricks/greeting
+  plugin:
+    path: ../../../../../bricks/plugin
+  simple:
+    path: ../../../../../bricks/simple
   todos:
-    path: ../../../bricks/todos
+    path: ../../../../../bricks/todos
   widget:
-    git:
-      url: https://github.com/felangel/mason
-      path: bricks/widget
+    path: ../../../../../bricks/widget
