ci: fix pana job

--- a/.github/workflows/mason_cli.yaml
+++ b/.github/workflows/mason_cli.yaml
@@ -67,6 +67,10 @@ jobs:
   pana:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: packages/mason_cli
+
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: dart-lang/setup-dart@v1
