--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
   build_runner: ^2.0.0
   build_verify: ^2.0.0
   build_version: ^2.0.0
+  coverage: ^1.0.2
   mocktail: ^0.2.0
   very_good_analysis: ^2.4.0
 
