--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -4,13 +4,24 @@ on:
   push:
     branches:
       - master
+    paths:
+      - .github/workflows/mason.yaml
+      - packages/mason/**
 
   pull_request:
     branches:
       - master
+      - refactor/mason_cli
+    paths:
+      - .github/workflows/mason.yaml
+      - packages/mason/**
 
 jobs:
-  setup:
+  build:
+    defaults:
+      run:
+        working-directory: packages/mason
+
     runs-on: ubuntu-latest
 
     steps:
@@ -26,30 +37,22 @@ jobs:
       - name: Analyze
         run: dart analyze --fatal-infos --fatal-warnings .
 
-      - name: Ensure Build
-        run: dart test --run-skipped -t pull-request-only
+      # - name: Run Tests
+      #   run: |
+      #     pub global activate test_coverage
+      #     export PATH=$PATH:$HOME/.pub-cache/bin
+      #     test_coverage
 
-  build:
-    needs: setup
-
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
-
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: dart-lang/setup-dart@v1
-
-      - name: Install Dependencies
-        run: dart pub get
-
-      - name: Run Tests
-        run: dart test -j 1 -x pull-request-only --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+      # - name: Check Code Coverage
+      #   uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
+      #   with:
+      #     path: packages/mason/coverage/lcov.info
 
   pana:
+    defaults:
+      run:
+        working-directory: packages/mason
+
     runs-on: ubuntu-latest
 
     steps:
