--- a/.github/workflows/mason_logger.yaml
+++ b/.github/workflows/mason_logger.yaml
@@ -11,7 +11,7 @@ on:
   pull_request:
     branches:
       - master
-      -  refactor/mason_cli
+      - refactor/mason_cli
     paths:
       - .github/workflows/mason_logger.yaml
       - packages/mason_logger/**
@@ -49,6 +49,10 @@ jobs:
           path: packages/mason_logger/coverage/lcov.info
 
   pana:
+    defaults:
+      run:
+        working-directory: packages/mason_logger
+
     runs-on: ubuntu-latest
 
     steps:
