--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   http: ^0.13.3
   json_annotation: ^4.0.1
   mason_logger: ^0.1.0-dev.2
+  meta: ^1.7.0
   mustache_template: ^2.0.0
   path: ^1.8.0
   recase: ^4.0.0
@@ -29,6 +30,4 @@ dev_dependencies:
   json_serializable: ^4.1.0
   mocktail: ^0.1.1
   test: ^1.17.0
-
-executables:
-  mason:
+  very_good_analysis: ^2.4.0
