ci: enable tests for package:mason

--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -37,16 +37,16 @@ jobs:
       - name: Analyze
         run: dart analyze --fatal-infos --fatal-warnings .
 
-      # - name: Run Tests
-      #   run: |
-      #     pub global activate test_coverage
-      #     export PATH=$PATH:$HOME/.pub-cache/bin
-      #     test_coverage
+      - name: Run Tests
+        run: |
+          pub global activate test_coverage
+          export PATH=$PATH:$HOME/.pub-cache/bin
+          test_coverage
 
-      # - name: Check Code Coverage
-      #   uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
-      #   with:
-      #     path: packages/mason/coverage/lcov.info
+      - name: Check Code Coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
+        with:
+          path: packages/mason/coverage/lcov.info
 
   pana:
     defaults:
