--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   meta: ^1.7.0
   mustache_template: ^2.0.0
   path: ^1.8.0
+  platform: ^3.1.0
   recase: ^4.0.0
   universal_io: ^2.0.4
   yaml: ^3.1.0
