--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mason_cli
 description: >
-  A Dart template generator which helps teams generate files quickly and consistently.
+  Mason CLI allows developers to create and consume reusable templates called bricks.
 version: 0.1.0-dev.1
 homepage: https://github.com/felangel/mason
 
@@ -8,16 +8,20 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  args: ^2.1.0
+  checked_yaml: ^2.0.1
   mason: ^0.1.0-dev.1
+  path: ^1.8.0
   pub_updater: ^0.2.1
+  recase: ^4.0.0
   universal_io: ^2.0.4
 
 dev_dependencies:
   build_runner: ^2.0.0
   build_verify: ^2.0.0
   build_version: ^2.0.0
-  coverage: ^1.0.2
   mocktail: ^0.2.0
+  test: ^1.17.0
   very_good_analysis: ^2.4.0
 
 executables:
