--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mason_cli
 description: >
   Mason CLI allows developers to create and consume reusable templates called bricks.
-version: 0.1.0-dev.1
+version: 0.1.0-dev.2
 homepage: https://github.com/felangel/mason
 
 environment:
@@ -20,6 +20,8 @@ dev_dependencies:
   build_runner: ^2.0.0
   build_verify: ^2.0.0
   build_version: ^2.0.0
+  collection: ^1.15.0
+  coverage: ^1.0.2
   mocktail: ^0.2.0
   test: ^1.17.0
   very_good_analysis: ^2.4.0
