--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -26,5 +26,9 @@ dev_dependencies:
   test: ^1.17.0
   very_good_analysis: ^2.4.0
 
+dependency_overrides:
+  mason:
+    path: ../mason
+
 executables:
   mason:
