--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -34,10 +34,7 @@ jobs:
         run: dart format --set-exit-if-changed lib
 
       - name: Analyze
-        run: dart analyze --fatal-infos --fatal-warnings .
-
-      - name: Ensure Build
-        run: dart test --run-skipped -t pull-request-only
+        run: dart analyze --fatal-infos --fatal-warnings .      
 
   build:
     needs: setup
@@ -61,7 +58,7 @@ jobs:
         run: dart pub get
 
       - name: Run Tests
-        run: dart test -j 1 -x pull-request-only --coverage=coverage && dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+        run: dart test -j 1 --coverage=coverage && dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
