fix(mason): bundle file sort order (#188)

--- a/.github/workflows/mason_cli.yaml
+++ b/.github/workflows/mason_cli.yaml
@@ -17,11 +17,11 @@ on:
 
 jobs:
   setup:
-    runs-on: ubuntu-latest
-
     defaults:
       run:
         working-directory: packages/mason_cli
+
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2.3.4
@@ -42,11 +42,11 @@ jobs:
   build:
     needs: setup
 
-    runs-on: ${{ matrix.os }}
-
     defaults:
       run:
         working-directory: packages/mason_cli
+
+    runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
@@ -61,7 +61,7 @@ jobs:
         run: dart pub get
 
       - name: Run Tests
-        run: dart test -j 1 -x pull-request-only --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+        run: dart test -j 1 -x pull-request-only --coverage=coverage && dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
@@ -69,11 +69,11 @@ jobs:
           path: packages/mason_cli/coverage/lcov.info
 
   pana:
-    runs-on: ubuntu-latest
-
     defaults:
       run:
         working-directory: packages/mason_cli
+
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2.3.4
