feat(mason_cli): upgrade to support variable enhancements

--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -29,6 +29,8 @@ dev_dependencies:
 dependency_overrides:
   mason:
     path: ../mason
+  mason_logger:
+    path: ../mason_logger
 
 executables:
   mason:
