--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -29,3 +29,7 @@ dev_dependencies:
   mocktail: ^0.2.0
   test: ^1.17.0
   very_good_analysis: ^2.4.0
+
+dependency_overrides:
+  mason_logger:
+    path: ../mason_logger
