feat(mason_logger): add confirm API and add defaultValue to prompt

--- a/packages/mason_cli/test/fixtures/make/mason.yaml
+++ b/packages/mason_cli/test/fixtures/make/mason.yaml
@@ -1,6 +1,8 @@
 bricks:
   app_icon:
     path: ../../../../../bricks/app_icon
+  bio:
+    path: ../../../../../bricks/bio
   documentation:
     path: ../../../../../bricks/documentation
   hello_world:
