--- a/packages/mason_cli/test/fixtures/new/bricks/hello_world/brick.yaml
+++ b/packages/mason_cli/test/fixtures/new/bricks/hello_world/brick.yaml
@@ -1,5 +1,9 @@
 name: hello_world
 description: A new brick created with the Mason CLI.
-version: 1.0.0
+version: 0.1.0+1
 vars:
-  - name
+  name:
+    type: string
+    description: Your name
+    default: Dash
+    prompt: What is your name?
