refactor(mason): upgrade example bricks and README

--- a/bricks/app_icon/brick.yaml
+++ b/bricks/app_icon/brick.yaml
@@ -1,5 +1,8 @@
 name: app_icon
-description: Create an app_icon file from a URL
-version: 1.0.0
+description: Create an app icon file from a URL
+version: 0.1.0+1
 vars:
-  - url
+  url:
+    type: string
+    description: The app icon URL.
+    prompt: Enter your app icon URL.
