--- a/bricks/hello_world/brick.yaml
+++ b/bricks/hello_world/brick.yaml
@@ -1,5 +1,9 @@
 name: hello_world
 description: A Simple Hello World Template
-version: 1.0.0
+version: 0.1.0+1
 vars:
-  - name
+  name:
+    type: string
+    description: Your name
+    default: Dash
+    prompt: What is your name?
