--- a/bricks/hooks/brick.yaml
+++ b/bricks/hooks/brick.yaml
@@ -1,5 +1,9 @@
 name: hooks
 description: A Hooks Example Template
-version: 1.0.0
+version: 0.1.0+1
 vars:
-  - name
+  name:
+    type: string
+    description: Your name
+    default: Dash
+    prompt: What is your name?
