--- a/packages/mason_cli/test/fixtures/make/mason.yaml
+++ b/packages/mason_cli/test/fixtures/make/mason.yaml
@@ -11,6 +11,8 @@ bricks:
     path: ../../../../../bricks/hooks
   greeting:
     path: ../../../../../bricks/greeting
+  legacy:
+    path: ../../../../../bricks/legacy
   plugin:
     path: ../../../../../bricks/plugin
   simple:
