chore(mason_cli): v0.1.0-dev.6

--- a/packages/mason_cli/example/mason.yaml
+++ b/packages/mason_cli/example/mason.yaml
@@ -11,6 +11,8 @@ bricks:
     path: ../../../bricks/hello_world
   hooks:
     path: ../../../bricks/hooks
+  legacy:
+    path: ../../../bricks/legacy
   plugin:
     path: ../../../bricks/plugin
   simple:
