--- a/packages/mason_cli/example/mason.yaml
+++ b/packages/mason_cli/example/mason.yaml
@@ -15,6 +15,8 @@ bricks:
     path: ../../../bricks/legacy
   plugin:
     path: ../../../bricks/plugin
+  random_color:
+    path: ../../../bricks/random_color
   simple:
     path: ../../../bricks/simple
   todos:
