--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
+# Files and directories created by pub
+.dart_tool/
+.packages
+# Remove the following pattern if you wish to check in your lock file
+pubspec.lock
+
 # Local Mason Files
 .mason/
