--- a/packages/mason/test/fixtures/missing_run/hooks/pubspec.yaml
+++ b/packages/mason/test/fixtures/missing_run/hooks/pubspec.yaml
@@ -4,7 +4,4 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  mason:
-    git:
-      url: https://github.com/felangel/mason
-      path: packages/mason
+  mason: any
