--- a/bricks/random_color/hooks/pubspec.yaml
+++ b/bricks/random_color/hooks/pubspec.yaml
@@ -4,4 +4,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  mason: ^0.1.0-dev.5
+  mason:
+    git:
+      url: https://github.com/felangel/mason
+      path: packages/mason
