--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -3,6 +3,7 @@ description: >
   A Dart template generator which helps teams generate files quickly and consistently.
 version: 0.1.0-dev.5
 homepage: https://github.com/felangel/mason
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -13,7 +14,8 @@ dependencies:
   crypto: ^3.0.1
   http: ^0.13.3
   json_annotation: ^4.4.0
-  mason_logger: ^0.1.0-dev.4
+  mason_logger:
+    path: ../mason_logger
   meta: ^1.7.0
   mustache_template: ^2.0.0
   path: ^1.8.0
@@ -29,7 +31,3 @@ dev_dependencies:
   mocktail: ^0.2.0
   test: ^1.17.0
   very_good_analysis: ^2.4.0
-
-dependency_overrides:
-  mason_logger:
-    path: ../mason_logger
