--- a/.github/workflows/mason_cli.yaml
+++ b/.github/workflows/mason_cli.yaml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
+        os: [macos-latest, windows-2019, ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v2.3.4
