feat(mason): expose packageVersion constant

--- a/packages/mason/build.yaml
+++ b/packages/mason/build.yaml
@@ -1,6 +1,9 @@
 # See https://github.com/dart-lang/build/tree/master/build_web_compilers#configuration
 targets:
   $default:
+    sources:
+      exclude:
+        - test/**
     builders:
       json_serializable:
         options:
