--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.0.0
   build_verify: ^2.0.0
+  build_version: ^2.0.0
   coverage: ^1.0.2
   json_serializable: ^6.0.0
   mocktail: ^0.2.0
