--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  archive: ^3.1.11
   checked_yaml: ^2.0.1
   collection: ^1.15.0
   crypto: ^3.0.1
