--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -1,13 +1,14 @@
 name: mason
 description: >
   A Dart template generator which helps teams generate files quickly and consistently.
-version: 0.1.0-dev.6
+version: 0.1.0-dev.7
 homepage: https://github.com/felangel/mason
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  archive: ^3.1.11
   checked_yaml: ^2.0.1
   collection: ^1.15.0
   crypto: ^3.0.1
@@ -17,6 +18,7 @@ dependencies:
   meta: ^1.7.0
   mustache_template: ^2.0.0
   path: ^1.8.0
+  pub_semver: ^2.1.0
   recase: ^4.0.0
   universal_io: ^2.0.4
   yaml: ^3.1.0
