--- a/packages/mason_api/pubspec.yaml
+++ b/packages/mason_api/pubspec.yaml
@@ -1,5 +1,5 @@
-name: mason_auth
-description: An auth client used by the [Mason CLI](https://github.com/felangel/mason).
+name: mason_api
+description: A Dart API client used by the Mason CLI (package:mason_cli).
 version: 0.1.0-dev.1
 homepage: https://github.com/felangel/mason
 
@@ -21,7 +21,3 @@ dev_dependencies:
   mocktail: ^0.2.0
   test: ^1.19.0
   very_good_analysis: ^2.4.0
-
-dependency_overrides:
-  mason:
-    path: ../mason
