--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   args: ^2.1.0
   checked_yaml: ^2.0.1
   mason: ^0.1.0-dev.6
-  mason_auth: ^0.1.0-dev.1
+  mason_api: ^0.1.0-dev.1
   path: ^1.8.0
   pub_updater: ^0.2.1
   recase: ^4.0.0
@@ -30,8 +30,8 @@ dev_dependencies:
 dependency_overrides:
   mason:
     path: ../mason
-  mason_auth:
-    path: ../mason_auth
+  mason_api:
+    path: ../mason_api
   mason_logger:
     path: ../mason_logger
 
