--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   checked_yaml: ^2.0.1
   mason: ^0.1.0-dev.6
   mason_api: ^0.1.0-dev.1
+  meta: ^1.7.0
   path: ^1.8.0
   pub_updater: ^0.2.1
   recase: ^4.0.0
