update mason new to include environment

--- a/packages/mason_cli/test/fixtures/new/bricks/hello_world/brick.yaml
+++ b/packages/mason_cli/test/fixtures/new/bricks/hello_world/brick.yaml
@@ -1,6 +1,10 @@
 name: hello_world
 description: A new brick created with the Mason CLI.
 version: 0.1.0+1
+
+environment:
+  mason: ">=0.1.0-dev <0.1.0"
+
 vars:
   name:
     type: string
