feat(mason_cli): mason init only generate mason.yaml

--- a/packages/mason_cli/test/fixtures/init/mason.yaml
+++ b/packages/mason_cli/test/fixtures/init/mason.yaml
@@ -3,8 +3,7 @@
 bricks:
   # Sample Brick
   # Run `mason make hello` to try it out.
-  hello:
-    path: bricks/hello
+  hello: any
   # Bricks can also be imported via git url.
   # Uncomment the following lines to import
   # a brick from a remote git url.
