feat(mason_cli): support enum vars

--- a/packages/mason_cli/test/fixtures/make/mason.yaml
+++ b/packages/mason_cli/test/fixtures/make/mason.yaml
@@ -5,6 +5,8 @@ bricks:
     path: ../../../../../bricks/bio
   documentation:
     path: ../../../../../bricks/documentation
+  favorite_color:
+    path: ../../../../../bricks/favorite_color
   hello_world:
     path: ../../../../../bricks/hello_world
   hooks:
