--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -11,23 +11,23 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
-  args: ^2.1.0
-  checked_yaml: ^2.0.1
-  mason: ^0.1.0-dev.30
-  mason_api: ^0.1.0-dev.7
-  meta: ^1.7.0
-  path: ^1.8.0
-  pub_updater: ^0.2.1
-  recase: ^4.0.0
+  args: any
+  checked_yaml: any
+  mason: any
+  mason_api: any
+  meta: any
+  path: any
+  pub_updater: any
+  recase: any
 
 dev_dependencies:
-  build_runner: ^2.0.0
-  build_verify: ^3.0.0
-  build_version: ^2.0.0
-  collection: ^1.15.0
-  mocktail: ^0.3.0
-  test: ^1.17.0
-  very_good_analysis: ^2.4.0
+  build_runner: any
+  build_verify: any
+  build_version: any
+  collection: any
+  mocktail: any
+  test: any
+  very_good_analysis: any
 
 executables:
   mason:
