--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - .github/workflows/mason.yaml
+      - packages/mason_logger/**
       - packages/mason/**
 
   pull_request:
@@ -13,6 +14,7 @@ on:
       - master
     paths:
       - .github/workflows/mason.yaml
+      - packages/mason_logger/**
       - packages/mason/**
 
 jobs:
