feat: brick.yaml json schema

--- a/bricks/app_icon/brick.yaml
+++ b/bricks/app_icon/brick.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../brick.yaml.schema.json
 name: app_icon
 description: Create an app icon file from a URL
 version: 0.1.0+1
