--- a/bricks/favorite_color/brick.yaml
+++ b/bricks/favorite_color/brick.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../brick.yaml.schema.json
 name: favorite_color
 description: A new brick created with the Mason CLI.
 
