--- a/bricks/hello/brick.yaml
+++ b/bricks/hello/brick.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../brick.yaml.schema.json
 name: hello
 description: An example brick.
 repository: https://github.com/felangel/mason/tree/master/bricks/hello
