--- a/bricks/hello_world/brick.yaml
+++ b/bricks/hello_world/brick.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../brick.yaml.schema.json
 name: hello_world
 description: A Simple Hello World Template
 version: 0.1.0+1
