--- a/bricks/random_color/brick.yaml
+++ b/bricks/random_color/brick.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../brick.yaml.schema.json
 name: random_color
 description: A Random Color Generator
 version: 0.1.0+1
